--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     
   <head>
       <nav>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="content.html">All About</a>
     </nav>
 
